{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 381,
  "lineage": "a5e05305-d563-64ca-9baf-e420f0ebe40a",
  "resources": [
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc15034873eea6b4",
            "domain": "vpc",
            "id": "eipalloc-0dc15034873eea6b4",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-176-162-249.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.162.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP-A"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP-A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b106e6bccf65c77",
            "domain": "vpc",
            "id": "eipalloc-09b106e6bccf65c77",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-180-233-211.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.233.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP-B"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP-B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc15034873eea6b4",
            "association_id": "eipassoc-0650d4f18c42ee506",
            "connectivity_type": "public",
            "id": "nat-0b390f84ed0591929",
            "network_interface_id": "eni-07f01829baf1a16ff",
            "private_ip": "192.168.4.251",
            "public_ip": "18.176.162.249",
            "subnet_id": "subnet-0688bdc3fd2100871",
            "tags": {
              "Name": "NAT-GW-A"
            },
            "tags_all": {
              "Name": "NAT-GW-A"
            }
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b106e6bccf65c77",
            "association_id": "eipassoc-04dcfaa2b550e7539",
            "connectivity_type": "public",
            "id": "nat-05bf3fd5e2e4b4f44",
            "network_interface_id": "eni-0ed8a84f27f64adbd",
            "private_ip": "192.168.30.227",
            "public_ip": "18.180.233.211",
            "subnet_id": "subnet-0e6f4aab62488dd73",
            "tags": {
              "Name": "NAT-GW-B"
            },
            "tags_all": {
              "Name": "NAT-GW-B"
            }
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-B",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pub-sub-2-b",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:route-table/rtb-00fdd9df937fa2627",
            "id": "rtb-00fdd9df937fa2627",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b390f84ed0591929",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri-RT-A"
            },
            "tags_all": {
              "Name": "Pri-RT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pri-RT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:route-table/rtb-0b993595966748429",
            "id": "rtb-0b993595966748429",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05bf3fd5e2e4b4f44",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri-RT-B"
            },
            "tags_all": {
              "Name": "Pri-RT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-B",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-B",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pub-sub-2-b",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-3-a-with-Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065c2e0ea5ebd6915",
            "route_table_id": "rtb-00fdd9df937fa2627",
            "subnet_id": "subnet-013e7ab86173cdca5"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.NAT-GW.aws_route_table.Pri-RT-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-3-a",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-4-b-with-Pri-RT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b207798041d9a9e",
            "route_table_id": "rtb-0b993595966748429",
            "subnet_id": "subnet-0c30a645c7ec2d330"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-B",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-B",
            "module.NAT-GW.aws_route_table.Pri-RT-B",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-4-b",
            "module.VPC.aws_subnet.pub-sub-2-b",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-5-a-with-Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069bfacaf5165452e",
            "route_table_id": "rtb-00fdd9df937fa2627",
            "subnet_id": "subnet-017c3f07b4806c886"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.NAT-GW.aws_route_table.Pri-RT-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-5-a",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-6-B-with-Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd58706b272a02d",
            "route_table_id": "rtb-00fdd9df937fa2627",
            "subnet_id": "subnet-027c8446c0ea6c288"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.NAT-GW.aws_route_table.Pri-RT-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-6-b",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-7-a-with-Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd58706b272a02d",
            "route_table_id": "rtb-00fdd9df937fa2627",
            "subnet_id": "subnet-027c8446c0ea6c288"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.NAT-GW.aws_route_table.Pri-RT-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-6-b",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.NAT-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-8-B-with-Pri-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd58706b272a02d",
            "route_table_id": "rtb-00fdd9df937fa2627",
            "subnet_id": "subnet-027c8446c0ea6c288"
          },
          "dependencies": [
            "module.NAT-GW.aws_eip.EIP-NAT-GW-A",
            "module.NAT-GW.aws_nat_gateway.NAT-GW-A",
            "module.NAT-GW.aws_route_table.Pri-RT-A",
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_subnet.pri-sub-6-b",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:internet-gateway/igw-0a21e1cd23ca9928b",
            "id": "igw-0a21e1cd23ca9928b",
            "owner_id": "637423369403",
            "tags": {
              "Name": "App-EKS-igw"
            },
            "tags_all": {
              "Name": "App-EKS-igw"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:route-table/rtb-0d918d3632de39594",
            "id": "rtb-0d918d3632de39594",
            "owner_id": "637423369403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a21e1cd23ca9928b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-1-a_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5348980328efbb",
            "route_table_id": "rtb-0d918d3632de39594",
            "subnet_id": "subnet-0688bdc3fd2100871"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.pub-sub-1-a",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-2-b_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e560944408444289",
            "route_table_id": "rtb-0d918d3632de39594",
            "subnet_id": "subnet-0e6f4aab62488dd73"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.internet_gateway",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.pub-sub-2-b",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-013e7ab86173cdca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013e7ab86173cdca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub-3-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-4-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-0c30a645c7ec2d330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c30a645c7ec2d330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub-4-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-5-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-017c3f07b4806c886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017c3f07b4806c886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub-5-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-6-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-027c8446c0ea6c288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027c8446c0ea6c288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub-6-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-7-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-09fc3fc903c1e4078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fc3fc903c1e4078",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-7-a"
            },
            "tags_all": {
              "Name": "pri-sub-7-a"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-8-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-0ddd546aaef22f886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddd546aaef22f886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-8-b"
            },
            "tags_all": {
              "Name": "pri-sub-8-b"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-0688bdc3fd2100871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0688bdc3fd2100871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub-1-a",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-2-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:subnet/subnet-0e6f4aab62488dd73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6f4aab62488dd73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423369403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub-2-b",
              "kubernetes.io/cluster/App-EKS": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-033966be9ca3051f4"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:637423369403:vpc/vpc-033966be9ca3051f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08d2f29250f4d6792",
            "default_route_table_id": "rtb-097322735c3b1d16e",
            "default_security_group_id": "sg-0c3636be865d52971",
            "dhcp_options_id": "dopt-05c6f32b044ba2f7b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033966be9ca3051f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097322735c3b1d16e",
            "owner_id": "637423369403",
            "tags": {
              "Name": "App-EKS-vpc"
            },
            "tags_all": {
              "Name": "App-EKS-vpc"
            }
          }
        }
      ]
    }
  ]
}